Intented files to hopefully reduce merge conflicts